--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -60,5 +60,5 @@
     </div>
 
     <footer class="m">
-      <p>Written and coded by <a href="https://ian-agpawa.herokuapp.com" target="_blank">Ian Agpawa</a></p>
+      <p>Written and coded by <a href="https://ian-agpawa.appspot.com" target="_blank">Ian Agpawa</a></p>
     </footer>
